--- a/LESS/global.less
+++ b/LESS/global.less
@@ -19,7 +19,7 @@ html {
 img {
     // display: block;
     max-width: 100%;
-    
+    box-shadow: 0.35rem 0.5rem 0.5rem @dark;    
     height: auto;
     // .test-border;
 }
